--- a/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
@@ -484,7 +484,7 @@ cplot <- cowplot::plot_grid(
 print(cplot)
 
 
-#cowplot::save_plot(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central3.png"), cplot, bg="white",dpi = 600, units = "in", base_width=8.5, base_height = 6)
+cowplot::save_plot(here::here("analyses", "5community_climate_ecology", "figures", "community_structure_central3.png"), cplot, bg="white",dpi = 600, units = "in", base_width=8.5, base_height = 6)
 
 
 
