--- a/analyses/5community_climate_ecology/analyses/Static_3d_community_structure.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Static_3d_community_structure.Rmd
@@ -100,12 +100,12 @@ plot(p1$envfit.convert(ef), at = p1$origin)
 
 points(p1, "points", pch=c(16,17), col=c('#44b89d','#f56969','#4c78b5'), cex=2)
 
-text(p1$xyz.convert(cent1[,4:6]), rownames(cent1), pos=2)
+#text(p1$xyz.convert(cent1[,4:6]), rownames(cent1), pos=2)
 
-legend("topright", pch = c(16,17), yjust=0,
-legend = c("MPA","REF"), cex = 0.8)
-legend(s3d$xyz.convert(47, 60, 0.24), pch = 22:21, yjust = 0,
-legend = c("vaccinated", "not vaccinated"), cex = 1.1)
+legend("topright", pch = c(1,2,16,16,16), yjust=0,
+legend = c("MPA","REF", "Before","During","After"), col = c("black","black",'#44b89d','#f56969','#4c78b5'), cex = 0.8)
+
+
 
 #plot(ef,arrow.mul=1, col="blue")
 
