fixed duplicate targeted status

--- a/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
@@ -539,10 +539,12 @@ affinity_dat$genusspecies <- tolower(affinity_dat$genusspecies)
 
 affinity_select1 <- affinity_dat %>% 
                    select(common_name, thermal_affinity, targeted)%>%
+                   distinct(common_name, .keep_all=TRUE)%>%
                    mutate(common_name = gsub(" ", "_", common_name))
 
 affinity_select2 <- affinity_dat %>% 
                    select(scientific_name=genusspecies, thermal_affinity, targeted)%>%
+                   distinct(scientific_name, .keep_all=TRUE)%>%
                    mutate(scientific_name = gsub(" ", "_", scientific_name))
 
 ################################################################################
@@ -826,6 +828,18 @@ deep_reef_join1 <- left_join(deep_reef_long, affinity_select2, by=c("species"="s
 ```
 
 
+#export data
+```{r}
+datalist <- list(CCFRP = CCFRP_join1, kelp_combined = kelp_combined_join1, 
+                 kelp_swath = kelp_swath_join1, kelp_upc = kelp_upc_join1,
+        deep_reef = deep_reef_join1)
+
+save(CCFRP_join1, kelp_combined_join1, 
+                 kelp_swath_join1, kelp_upc_join1,
+     kelp_fish_join1,
+        deep_reef_join1, file= file.path("/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data","all_groups_mpa_level_means_long.rda"))
+
+```
 
 
 
