--- a/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_0_data_transformations.Rmd
@@ -49,17 +49,23 @@ rocky <- read.csv(file.path(dat_dir, "rocky_mpa_year.csv"))
 #should be included at this stage. 
 
 CCFRP_cen <- CCFRP %>% filter(region4=='central') %>%
-  select(where(~ any(. != 0)))
+  select(where(~ any(. != 0)))%>%
+  filter(year>=2007)
 kelp_swath_cen <- kelp_swath %>% filter(region4=='central') %>%
-  select(where(~ any(. != 0)))
+  select(where(~ any(. != 0)))%>%
+  filter(year>=2007)
 kelp_upc_cen <- kelp_upc %>% filter(region4=='central') %>%
-  select(where(~ any(. != 0)))
+  select(where(~ any(. != 0)))%>%
+  filter(year>=2007)
 kelp_fish_cen <- kelp_fish %>% filter(region4=='central') %>%
-  select(where(~ any(. != 0)))
+  select(where(~ any(. != 0)))%>%
+  filter(year>=2007)
 deep_reef_cen <- deep_reef %>% filter(region4=='central') %>%
-  select(where(~ any(. != 0)))
+  select(where(~ any(. != 0)))%>%
+  filter(year>=2007)
 rocky_cen <- rocky %>% filter(region4=='central') %>%
-  select(where(~ any(. != 0)))
+  select(where(~ any(. != 0)))%>%
+  filter(year>=2007)
 
 ```
 
@@ -493,31 +499,38 @@ rocky <- read.csv(file.path(dat_dir, "rocky_mpa_year.csv"))
 ```{r}
 CCFRP_long <- CCFRP %>%
               pivot_longer(cols=25:ncol(.), names_to="species",
-                           values_to = "counts")
+                           values_to = "counts")%>%
+              filter(year >= 2007)
 
 kelp_combined_long <- kelp_combined %>%
               pivot_longer(cols=25:ncol(.), names_to="species",
-                           values_to = "counts")
+                           values_to = "counts")%>%
+              filter(year >= 2007)
 
 kelp_swath_long <- kelp_swath %>%
               pivot_longer(cols=25:ncol(.), names_to="species",
-                           values_to = "counts")
+                           values_to = "counts")%>%
+              filter(year >= 2007)
 
 kelp_upc_long <- kelp_upc %>%
               pivot_longer(cols=25:ncol(.), names_to="species",
-                           values_to = "counts")
+                           values_to = "counts")%>%
+              filter(year >= 2007)
 
 kelp_fish_long <- kelp_fish %>%
               pivot_longer(cols=25:ncol(.), names_to="species",
-                           values_to = "counts")
+                           values_to = "counts")%>%
+              filter(year >= 2007)
 
 deep_reef_long <- deep_reef %>%
               pivot_longer(cols=26:ncol(.), names_to="species",
-                           values_to = "counts")
+                           values_to = "counts")%>%
+              filter(year >= 2007)
 
 rocky_long <- rocky %>%
               pivot_longer(cols=24:ncol(.), names_to="species",
-                           values_to = "counts")
+                           values_to = "counts")%>%
+              filter(year >= 2007)
 ```
 
 
