--- a/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_2_NMDS.Rmd
@@ -170,7 +170,7 @@ CCFRP<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
        fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.02,height=0.02), size=2) + 
-  ggtitle("Rocky reef fish")+
+  ggtitle("Rocky reef fishes")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5',
                               '#44b89d','#f56969','#4c78b5'))+
   labs(shape="MPA",color='Heatwave period') +
@@ -256,7 +256,7 @@ kelp_invalg<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
   labs(shape="site type",color='heatwave period') +
   annotate(geom="text", 
-           x=0.29, 
+           x=0.3, 
            y=0.2, 
            col="black", 
            label= paste("Stress: ",kelp_invalg_stress$stress), parse=T,
@@ -327,11 +327,11 @@ kelp_fish<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
        fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=2) + 
-  ggtitle("kelp forest fish")+
+  ggtitle("Kelp forest fishes")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
   labs(shape="site type",color='heatwave period') +
   annotate(geom="text", 
-           x=0.11, 
+           x=0.05, 
            y=0.12, 
            col="black", 
            label= paste("Stress: ",kelp_fish_stress$stress), parse=T,
@@ -402,7 +402,7 @@ deep_reef<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
        arrow = arrow(length = unit(0.25, "cm")), colour = "grey50", lwd=0.5)+
      geom_text(data = en_coord_cont, aes(x = (NMDS1), y = (NMDS2)), colour = "black", 
        fontface = "bold", label = row.names(en_coord_cont), position=position_jitter(width=0.01,height=0.01), size=2) + 
-  ggtitle("Deep reef fish")+
+  ggtitle("Deep reef fishes")+
   scale_color_manual(values=c('#44b89d','#f56969','#4c78b5'))+
   labs(shape="site type",color='heatwave period') +
   #theme(text = element_text(12))+
@@ -485,7 +485,7 @@ rocky<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
   labs(shape="site type",color='heatwave period') +
   #theme(text = element_text(12))+
     annotate(geom="text", 
-           x=0.12, 
+           x=0.07, 
            y=0.15, 
            col="black", 
            label= paste("Stress: ",rocky_stress$stress), parse=T,
