--- a/analyses/7habitat/code/nmds_attributes.qmd
+++ b/analyses/7habitat/code/nmds_attributes.qmd
@@ -12,7 +12,6 @@ library(tidyverse)
 library(vegan)
 ```
 
-
 ```{r}
 # Clear workspace
 rm(list = ls())
@@ -55,8 +54,6 @@ att_raw <- att_raw %>%
                        "Piedras Blancas SMCA")))
 
 ```
-
-
 
 ## Create habitat and metadata dataframes
 
@@ -128,6 +125,7 @@ nmds_df <- scores(mds, display = "sites") %>%
 ## Generate Ellipses
 
 ### Option 1: MPA Habitat Type
+
 ```{r}
 plot.new()
 ell <- ordiellipse(mds, nmds_df$mpa_habitat_type, kind = "se", conf = 0.95, label = T)
@@ -143,6 +141,7 @@ for(i in levels(nmds_df$mpa_habitat_type)){
 ```
 
 ### Option 2: Planning Region
+
 ```{r}
 plot.new()
 ell_bioregion <- ordiellipse(mds, nmds_df$bioregion, 
@@ -160,6 +159,7 @@ for(i in levels(nmds_df$bioregion)){
 ```
 
 ### Option 3: 4 Region
+
 ```{r}
 plot.new()
 ell_4region <- ordiellipse(mds, nmds_df$four_region_north_ci, 
@@ -175,7 +175,6 @@ for(i in levels(nmds_df$four_region_north_ci)){
                                                    ell_4region[[i]]$scale))), 
                 four_region_north_ci = i))}
 ```
-
 
 ## Plot
 
@@ -203,7 +202,9 @@ ggplot(nmds_df, aes(x = NMDS1, y = NMDS2)) +
        shape = "") + 
   theme_classic() 
 ```
+
 ### 1b. Habitat Types, Centroid
+
 ```{r}
 centroids_habitat <- nmds_df %>% 
   group_by(mpa_habitat_type) %>% 
@@ -234,7 +235,6 @@ ggsave(file.path(plot.dir, "nmds-type-max.png"),
        width=7, height=4, units="in", dpi=600)
 ```
 
-
 ### 2. Planning Region
 
 ```{r}
@@ -260,6 +260,7 @@ ggplot(nmds_df, aes(x = NMDS1, y = NMDS2)) +
        shape = "") + 
   theme_classic()
 ```
+
 ### 3. Four Region
 
 ```{r}
@@ -285,6 +286,7 @@ ggplot(nmds_df, aes(x = NMDS1, y = NMDS2)) +
        shape = "") + 
   theme_classic()
 ```
+
 ### 4. Four Region, Centroid
 
 ```{r}
@@ -318,12 +320,11 @@ ggplot(nmds_df, aes(x = NMDS1, y = NMDS2)) +
        shape = "") + 
   theme_classic()
 ```
+
 ```{r}
 ggsave(file.path(plot.dir, "nmds-4reg-max.png"),
        width=7, height=4, units="in", dpi=600)
 ```
-
-
 
 ## Test for Differences
 
@@ -331,10 +332,12 @@ ggsave(file.path(plot.dir, "nmds-4reg-max.png"),
 dismat <- vegdist(nmds_data, method = "euclidean")
 ```
 
-
 ### Among Habitat Types
 
 ```{r}
+# Create distance matrix
+dismat <- vegdist(nmds_data, method = "euclidean")
+
 # Disper
 disper <- betadisper(dismat, type = "centroid", 
                      group = nmds_meta$mpa_habitat_type[nmds_meta$name %in% rownames(nmds_data)])
